--- a/SwitchThemes/SwitchThemesWin.csproj
+++ b/SwitchThemes/SwitchThemesWin.csproj
@@ -253,10 +253,15 @@
     <Error Condition="!Exists('..\packages\Costura.Fody.3.3.2\build\Costura.Fody.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Costura.Fody.3.3.2\build\Costura.Fody.props'))" />
   </Target>
   <PropertyGroup>
-    <PostBuildEvent>if "$(ConfigurationName)" == "Release" (
+    <PostBuildEvent Condition="'$(OS)' == 'Windows_NT' ">if "$(ConfigurationName)" == "Release" (
 rmdir Layouts /s /q
 robocopy $(ProjectDir)Layouts Layouts /E 
 EXIT /b 0
 )</PostBuildEvent>
+    <PostBuildEvent Condition="'$(OS)' != 'Windows_NT' ">if [ "$(ConfigurationName)" == "Release" ]; then (
+rm -rf Layouts
+rsync $(ProjectDir)Layouts/ Layouts -r
+exit 0
+); fi</PostBuildEvent>
   </PropertyGroup>
 </Project>
